@@ -1,4 +1,5 @@
 # Syntax: FROM [TO [MODE; */bin/* defaults to 755]]
+# Syntax: ln DESTDIR/FROM TO
 #
 # Without trailing slash: rename file TO. TO expansions can use
 # variables $PKG $VER $DOC. Scripts and manpages are automatically
@@ -9,3 +10,4 @@
 #    README  $DOC/ 644
 #    man.1
 #    program.pl
+#    ln usr/bin/program newname  => like cd /usr/bin; ln -s program newname
